# job-classification-agent

./: .env  README.md  app.py  pyproject.toml
data/: README.md
data/processed/: occupation_career_clusters.json  occupation_descriptions.json  occupation_sample_titles.json
data/raw/: All Career Clusters.xlsx  Alternate Titles.xlsx  Sample of Reported Titles.xlsx  Task Statements.xlsx  Technology Skills.xlsx
scripts/: README.md  create_assistant.py  create_vector_store.py  prepare_data.py
