[tool.poetry]
name = "job-classification-agent"
version = "0.1.0"
description = ""
authors = ["Stephan Zednik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
langchain = "^0.2.3"
openai = "^1.34.0"
langchain-core = "^0.2.5"
langchain-community = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
