[tool.poetry]
name = "job-classification-agent"
version = "0.1.0"
description = ""
authors = ["Stephan Zednik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
langchain = "^0.2.9"
openai = "^1.35.15"
langchain-core = "^0.2.5"
langchain-community = "^0.2.7"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
